build: 升级jest，增加babel支持

--- a/javascript/package.json
+++ b/javascript/package.json
@@ -13,6 +13,9 @@
   "author": "kivi",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.9.6",
+    "@babel/preset-env": "^7.9.6",
+    "babel-jest": "^26.0.1",
     "jest": "^24.8.0"
   }
 }
